# DLLDetect

./: .gitignore  CMakeLists.txt  README.md  appicon.rc  main.cpp  resources.qrc  test
gui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
include/: CodeSignatureAnalyzer.h  ColoredHeaderDelegate.h  DLLAnalyzer.h  DebugEventMonitor.h  HashComparator.h  LogManager.h  LogViewerWidget.h  NetworkDLLAnalyzer.h  ProcessManager.h  Result.h  WhitelistManager.h
resources/: known_hashes.txt  resources.qrc  whitelist.txt
src/: CMakeLists.txt  CodeSignatureAnalyzer.cpp  DLLAnalyzer.cpp  DebugEventMonitor.cpp  HashComparator.cpp  LogViewerWidget.cpp  NetworkDLLAnalyzer.cpp  ProcessManager.cpp  Result.cpp  WhitelistManager.cpp  logmanager.cpp
tools/: QNetworkAccessManager.py  README.md  analyze_dll.py  analyze_folder.py  analyzed_dlls.csv  analyzed_dlls_cleaned.csv  analyzed_dlls_with_mal.csv  append_malicious.py  append_new_sample.py  dll_classifier.pkl  predict_server.py  train_model.py
